--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World Second Time
+<html>
+	<head>
+			<title> Project 1</title>
+	</head>
+
+	<body>
+		<h1> Project 1</h1>
+		<p> This is the site of my second project. </p>
+	</body>
+
+
+</html>
