--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <html>
 	<head>
 			<title> Project 1</title>
+			<link rel="stylesheet" type="text/css" href="project1.css">
+
+
 	</head>
 
 	<body>
-		<h1> Project 1</h1>
+		<h1> Project 1: Playing with JQuery</h1>
 		<p> This is the site of my second project. </p>
-	</body>
 
+		<div class="container">
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+		</div>
+
+	</body>
+	<script type="text/javascript" src="project1.js"></script>
 
 </html>
