--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 	<head>
 			<title> Project 1</title>
 			<link rel="stylesheet" type="text/css" href="project1.css">
-
+			<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+			<script type="text/javascript" src="project1.js"></script>
 
 	</head>
 
@@ -18,6 +19,6 @@
 		</div>
 
 	</body>
-	<script type="text/javascript" src="project1.js"></script>
+	
 
 </html>
