--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 	<head>
 			<title> Project 1</title>
 			<link rel="stylesheet" type="text/css" href="project1.css">
-			<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+			<!-- This must be added for JQuery to work on the web (deployment); must add separately to work in local server (production) -->
+			<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> 
+			<!-- JQuery downloaded and saved locally in the same file (production) -->
+			<script type="text/javascript" src="jquery-2.2.1.js"></script>  
 			<script type="text/javascript" src="project1.js"></script>
 
 	</head>
