Add Slide Panel JQuery

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<body>
 		<h1> Project 1: Playing with JQuery</h1>
-		<p> This is the site of my second project. </p>
+		<p> Click function in action (JQuery). </p>
 
 		<div class="container">
 			<div class="box"></div>
@@ -20,6 +20,26 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
+
+		<p> MouseEnter function in action (JQuery). </p>
+		<div class="container1">
+			<div class="box1"></div>
+			<div class="box1"></div>
+			<div class="box1"></div>
+			<div class="box1"></div>
+		</div>
+
+
+		<p> Pull down (actually up) panel feature </p>
+		<div class="panel">
+			<br />   
+			<br />   
+			<p>Now you see me!</p>
+			<p class="slide">
+				<div class="pull-me">Slide Up / Down</div>
+			</p>
+		</div>
+
 
 	</body>
 	
