Add toggleClass highlighted
additional JQuery trickery

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 		<p> Click function in action (JQuery). </p>
 
 		<div class="container">
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
+			<div class="box"><p>Click</p></div>
+			<div class="box"><p>To</p></div>
+			<div class="box"><p>Disappear..</p></div>
+			<div class="box"><p>...</p></div>
 		</div>
 
 		<p> MouseEnter function in action (JQuery). </p>
 		<div class="container1">
-			<div class="box1"></div>
-			<div class="box1"></div>
-			<div class="box1"></div>
-			<div class="box1"></div>
+			<div class="box1"><p>Mouseenter</p></div>
+			<div class="box1"><p>function</p></div>
+			<div class="box1"><p>to</p></div>
+			<div class="box1"><p>fade</p></div>
 		</div>
 
 
@@ -40,6 +40,15 @@
 			</p>
 		</div>
 
+		<!-- two classes one element -->
+
+		<p> Toggle Highlights </P>
+			<div class="container2">
+				<div class="box2 highlighted"><p>Click</p></div>
+				<div class="box2 highlighted"><p>Me</p></div>
+				<div class="box2 highlighted"><p>To</p></div>
+				<div class="box2 highlighted"><p>HighLight</p></div>
+			</div>
 
 	</body>
 	
