--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<body>
 		<h1> Project 1: Playing with JQuery</h1>
-		<p> Click function in action (JQuery). </p>
+		<p class="magic"> Click function in action (JQuery). </p>
 
 		<div class="container">
 			<div class="box"><p>Click</p></div>
@@ -21,7 +21,7 @@
 			<div class="box"><p>...</p></div>
 		</div>
 
-		<p> MouseEnter function in action (JQuery). </p>
+		<p class="magic1"> MouseEnter function in action (JQuery). </p>
 		<div class="container1">
 			<div class="box1"><p>Mouseenter</p></div>
 			<div class="box1"><p>function</p></div>
@@ -42,7 +42,7 @@
 
 		<!-- two classes one element -->
 
-		<p> Toggle Highlights </P>
+		<p class="magic2"> Toggle Highlights </P>
 			<div class="container2">
 				<div class="box2 highlighted"><p>Click</p></div>
 				<div class="box2 highlighted"><p>Me</p></div>
