tried linking to css/main.css
tried linking to css file in a different directory

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 			<title> Project 1</title>
 			<link rel="stylesheet" type="text/css" href="project1.css">
+			<!--link rel="stylesheet" type="text/css" href="/PaulApivat.github.io/css/main.css"-->
 			<!-- This must be added for JQuery to work on the web (deployment); must add separately to work in local server (production) -->
 			<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> 
 			<!-- JQuery downloaded and saved locally in the same file (production) -->
